--- a/matrixCalc/.vscode/settings.json
+++ b/matrixCalc/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "mymat.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string.h": "c",
+        "stdlib.h": "c"
     }
 }
