small general typo fixes

--- a/matrixCalc/makefile
+++ b/matrixCalc/makefile
@@ -3,5 +3,5 @@ CFLAGS = -Wall -ansi -pedantic
 
 all: mainmat
 
-mainmat: mainmat.c mymat.c
-	$(CC) $(CFLAGS) mainmat.c mymat.c -o mainmat
+mainmat: mainmat.c mymat.c errors.c commands.c 
+	$(CC) $(CFLAGS) mainmat.c mymat.c errors.c commands.c -o mainmat
