finished main program, all functions are working. need to work on printing,errors and move parser functions from main to parser header

--- a/matrixCalc/.vscode/settings.json
+++ b/matrixCalc/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "mymat.h": "c",
+        "errors.h": "c",
+        "commands.h": "c",
         "stdio.h": "c",
         "string.h": "c",
         "stdlib.h": "c"
