makefile finsihed to include math library and requested flags

--- a/matrixCalc/makefile
+++ b/matrixCalc/makefile
@@ -1,7 +1,8 @@
 CC = gcc
 CFLAGS = -Wall -ansi -pedantic
+LIBS = -lm
 
 all: mainmat
 
-mainmat: mainmat.c mymat.c errors.c commands.c 
-	$(CC) $(CFLAGS) mainmat.c mymat.c errors.c commands.c -o mainmat
+mainmat: mainmat.c mymat.c errors.c commands.c print.c 
+	$(CC) $(CFLAGS) mainmat.c mymat.c errors.c commands.c print.c -o mainmat $(LIBS)
